# paperlens-reviewing

./: .gitignore  README-prod-git-run.md  README.md  pyproject.toml
configs/: server.yaml
scripts/: agent_smoke.py  assemble_grid.py  build_prep_cache.py  grid_models.tsv  launch_local.sh  make_advisor_maps.py  plot_commit_trajectory.py  plot_paperlens_versions.py  run_commit_track.sh  run_prep_cache.sh  run_score_model.sh  run_score_pdf.sh  score_commits.py  score_from_cache.py  test_7b.sh  test_worktree_venv.sh
src/paperlensreview/: __init__.py  __main__.py  agents.py  arxiv.py  checks.py  latexsrc.py  panel.py  pipeline.py  server.py
src/paperlensreview/ui/: index.html
tests/: test_latexsrc.py  test_pipeline.py
