[project]
name = "paperlens-reviewing"
version = "0.1.0"
description = "PaperLens reviewing UI: upload PDF -> paperprep -> paperlens score -> verdict."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.5",
    "python-multipart>=0.0.9",    # required by FastAPI for file uploads
    "requests>=2.31",
    "omegaconf>=2.3",
    "pillow>=10.0",               # 5x2 panel preview for the trajectory drilldown
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
paperlensreview = "paperlensreview.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paperlensreview"]

[tool.hatch.build]
include = ["src/paperlensreview/ui/**"]
